--- a/contact.html
+++ b/contact.html
@@ -60,23 +60,11 @@
     </div>
 
     <div class="survey">
-	    <form role="form" method="post" id="reused_form" >
-            <div class="form-group">
-                <label for="name"> Name:</label>
-                <input type="text" class="form-control" id="name" name="name" required maxlength="50">
-            </div>
-            <div class="form-group">
-                <label for="email"> Email:</label>
-                <input type="email" class="form-control" id="email" name="email" required maxlength="50">
-            </div>
-            <div class="form-group">
-                <label for="name"> Message:</label>
-                <textarea class="form-control" type="textarea" name="message" id="message" placeholder="Your Message Here" maxlength="6000" rows="7"></textarea>
-            </div>
-            <button type="submit" class="btn btn-lg btn-success pull-right" id="btnContactUs">Post It! &rarr;</button>
-            </form>
-            <div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Sent your message successfully!</h3> </div>
-            <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
+	    <form method="POST" action="https://formspree.io/blueberrytools@gmail.com">
+		  <input type="email" name="email" placeholder="Your email">
+		  <textarea name="message" placeholder="Test Message"></textarea>
+		  <button type="submit">Send Test</button>
+		</form>
 	</div>	
 </div>
 	
