--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Contact</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style_footer.css">
 	<link rel="stylesheet" href="style_contact.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
@@ -74,7 +74,7 @@
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<div class="copyright">
-					<p>© <span>2019</span> <a href="#" class="transition">VescaLabs</a> All rights reserved.</p>
+					<p>© <span><script>document.write(new Date().getFullYear())</script></span> <a href="#" class="transition">VescaLabs</a> All rights reserved.</p>
 				</div>
 			</div>
 		</div>
