--- a/guide_contact.html
+++ b/guide_contact.html
@@ -3,47 +3,54 @@
 <head>
 <title>Contacts utiles</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="style_contacts_utiles.css">
 	<link rel="stylesheet" href="style_footer.css">
+	<link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<link rel="icon" href="favicon.ico" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<meta name="author" content="Pierre-Louis Schnitzler">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <!-- Menu -->
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid"> 
-  <a class = "navbar-brand pull-left" href="index.html"><img src="favicon.png" alt="Logo"></a>
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target="#myNavbar">       
-		<span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-      </button>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="guide.html"><h4>Guides <span class="caret"></span></h4></a>
-			<ul class="dropdown-menu">
-			  <li><a href="guide_timeline.html"><h5>Les grandes étapes</h5></a></li>
-			  <li><a href="#"><h5>Contacts utiles</h5></a></li>
-			  <li><a href="guide_lexique.html"><h5>Lexique de l'immobilier</h5></a></li>
-			</ul>
-		  </li>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="simulation.html"><h4>Simulateurs <span class="caret"></span></h4></a>
-			<ul class="dropdown-menu">
-			  <li><a href="simulation_budget.html"><h5>Estimez votre budget</h5></a></li>
-			  <li><a href="#"><h5>Acheter ou louer</h5></a></li>
-			  <li><a href="#"><h5>Votre plan de financement</h5></a></li>
-			</ul>
-		  </li>
-        <li><a href="#"><h4>Contact</h4></a></li>
-		
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id = "navbar1" style="background-color:rgb(11,26,33);">
+  <div class="container">
+    <a class="navbar-brand" href="index.html" style="font-family: 'Crimson Text';">
+          <h2>Vesca</h2>
+        </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Accueil</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Guides
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="guide_timeline.html">Les grandes étapes</a>
+            <a class="dropdown-item" href="#">Contacts utiles</a>
+            <a class="dropdown-item" href="guide_lexique.html">Lexique de l'immobilier</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Simulateurs
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="simulation_budget.html">Estimez votre budget</a>
+            <a class="dropdown-item" href="#">Acheter ou louer</a>
+            <a class="dropdown-item" href="#">Votre plan de financement</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html#contact">Contact</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -51,32 +58,41 @@
 
 <!-- Contacts utiles : Courtiers, Site de recherche de logements neufs/anciens, Sites pour estimer le prix d'un bien--> 
 
-<body style="padding-top: 70px;">
+<body style="padding-top: 70px;font-family:'Roboto';">
 
-<div class="container" style="min-height:700px;" id="myUL"> 
-	<div class="page-header">
-        <h1 id="timeline">Contacts utiles</h1>
+<div class="container" style="padding-bottom:5vh;min-height:700px;">
+    <div class="page-header">
+        <center style="font-family: 'Crimson Text';font-size:10vh;padding-top:10vh;padding-bottom:8vh">Contacts utiles</center>
     </div>
+
+
+    <div class="container">
+	  <div class="row" style="margin: 15px;">
+	    <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+	      <img src="recherche_bien.jpg" class="img-fluid rounded"> <!-- Immo ancien--> 
+	    </a>
+	    <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+	      <img src="prix_marché.jpg" class="img-fluid rounded"> <!-- Immo neuf--> 
+	    </a>
+	    <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+	      <img src="immo_map.jpg" class="img-fluid rounded"> <!-- Carte prix, nuisances sonores... --> 
+	    </a>
+	  </div>
+	  <div class="row" style="margin: 15px;">
+	    <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+	      <img src="books.jpg" class="img-fluid rounded"> <!-- Recommandations de professionnels & blogs pro--> 
+	    </a>
+	    <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+	      <img src="agent.jpg" class="img-fluid rounded"> <!-- Après votre emménagement--> 
+	    </a>
+	    <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox" data-gallery="gallery" class="col-md-4">
+	      <img src="banque.jpg" class="img-fluid rounded"> <!-- Banques & prêts--> 
+	    </a>
+	  </div>
+	</div>
+
 </div>
 
-<script>
-function filtre() {
-    var input, filter, ul, li, a, i, txtValue;
-    input = document.getElementById("myInput");
-    filter = input.value.toUpperCase();
-    ul = document.getElementById("myUL");
-    li = ul.getElementsByTagName("li");
-    for (i = 0; i < li.length; i++) {
-        a = li[i].getElementsByTagName("a")[0];
-        txtValue = a.textContent || a.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            li[i].style.display = "";
-        } else {
-            li[i].style.display = "none";
-        }
-    }
-}
-</script>
 
 <!--Bottom Footer-->
 
