--- a/simulation_budget.html
+++ b/simulation_budget.html
@@ -3,12 +3,12 @@
 <head>
 <title>Budget</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="style_budget.css">
 	<link rel="stylesheet" href="style_footer.css">
+	<link href='https://fonts.googleapis.com/css?family=Crimson Text' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<link rel="icon" href="favicon.ico" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<meta name="author" content="Pierre-Louis Schnitzler">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -17,35 +17,28 @@
 
 <!-- Menu -->
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid"> 
-  <a class = "navbar-brand pull-left" href="index.html"><img src="favicon.png" alt="Logo"></a>
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target="#myNavbar">       
-		<span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-      </button>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="guide.html"><h4>Guides <span class="caret"></span></h4></a>
-			<ul class="dropdown-menu">
-			  <li><a href="guide_timeline.html"><h5>Les grandes étapes</h5></a></li>
-			  <li><a href="guide_contact.html"><h5>Contacts utiles</h5></a></li>
-			  <li><a href="guide_lexique.html"><h5>Lexique de l'immobilier</h5></a></li>
-			</ul>
-		  </li>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="simulation.html"><h4>Simulateurs <span class="caret"></span></h4></a>
-			<ul class="dropdown-menu">
-			  <li><a href="#"><h5>Estimez votre budget</h5></a></li>
-			  <li><a href="#"><h5>Acheter ou louer</h5></a></li>
-			  <li><a href="#"><h5>Votre plan de financement</h5></a></li>
-			</ul>
-		  </li>
-        <li><a href="#"><h4>Contact</h4></a></li>
-		
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id = "navbar1" style="background-color:rgb(11,26,33);">
+  <div class="container">
+    <a class="navbar-brand" href="index.html" style="font-family: 'Crimson Text';">
+          <h2>Vesca</h2>
+        </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Accueil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#guides">Guides</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#simulateurs">Simulateurs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
       </ul>
     </div>
   </div>
